--- a/package.json
+++ b/package.json
@@ -2,16 +2,18 @@
     "private": true,
     "scripts": {
         "dev": "npm run development",
+
         "development": "mix",
         "watch": "mix watch",
         "watch-poll": "mix watch -- --watch-options-poll=1000",
         "hot": "mix watch --hot",
         "prod": "npm run production",
-        "production": "mix --production"
+        "production": "mix --production",
+        "build": "npm run production"
     },
     "devDependencies": {
         "autoprefixer": "^10.4.21",
-        "axios": "^0.21",
+        "axios": "^1.8.4",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.5.3",
